--- a/conge.html
+++ b/conge.html
@@ -114,19 +114,16 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="./index.html" class
                         <form role="form">
                                 <div class="form-group">
                                         <label>Select Example</label>
-                                        <select class="form-control">
-                                            <option>One Vale</option>
-                                            <option>Two Vale</option>
-                                            <option>Three Vale</option>
-                                            <option>Four Vale</option>
+                                        <select class="form-control" id="personne">
+                                          
                                         </select>
                                  <label>Date Debut</label>
-                                 <input type="date" class="form-control" />
+                                 <input type="date" class="form-control" id="dateD" />
                              </div>
                              <div class="form-group">
                                 <label>Date fiin</label>
-                                <input type="date" class="form-control" />                            </div>
-                            <button type="submit" class="btn btn-default">Submit Button</button>
+                                <input type="date" class="form-control" id="dateF"  />                            </div>
+                            <button  type="submit" class="btn btn-default">Submit Button</button>
 
                         </form>
                     </div>
@@ -145,8 +142,7 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="./index.html" class
     <script src="assets/js/bootstrap.min.js"></script>
     <!-- METISMENU SCRIPTS -->
     <script src="assets/js/jquery.metisMenu.js"></script>
-      <!-- CUSTOM SCRIPTS -->
-    <script src="assets/js/custom.js"></script>
+
     
    
 </body>
