--- a/AjoutFormation.html
+++ b/AjoutFormation.html
@@ -96,7 +96,7 @@ font-size: 16px;"> <a href="./index.html" class="btn btn-danger square-btn-adjus
                         <a href="Personnel.html"><i class="fa fa-qrcode fa-3x"></i> Personnels</a>
                     </li>
                     <li>
-                        <a href="Condidats.html"><i class="fa fa-table fa-3x"></i> Condidats</a>
+                        <a href="Candidats.html"><i class="fa fa-table fa-3x"></i> Candidats</a>
                     </li>
                     <li>
                         <a href="form.html"><i class="fa fa-edit fa-3x"></i> Finance </a>
