--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ font-size: 16px;"><a href="#" class="btn btn-danger square-btn-adjust">Logout</a
                         <a href="Personnel.html"><i class="fa fa-qrcode fa-3x"></i> Personnels</a>
                     </li>
                     <li>
-                            <a   href="Condidats.html"><i class="fa fa-table fa-3x"></i> Condidats</a>
+                            <a   href="Candidats.html"><i class="fa fa-table fa-3x"></i> Candidats</a>
                         </li>
                     <li>
                         <a href="#"><i class="fa fa-edit fa-3x"></i> Finance </a>
