--- a/Personnel.html
+++ b/Personnel.html
@@ -85,7 +85,7 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="./index.html" class
                         <a class="active-menu"  href="Personnel.html"><i class="fa fa-qrcode fa-3x"></i> Personnels</a>
                     </li>	
                       <li  >
-                            <a    href="Condidats.html"><i class="fa fa-table fa-3x"></i> Condidats</a>
+                            <a    href="Candidats.html"><i class="fa fa-table fa-3x"></i> Candidats</a>
                         </li>
                     <li  >
                         <a  href="#"><i class="fa fa-edit fa-3x"></i> Finance </a>
