--- a/conge.html
+++ b/conge.html
@@ -89,7 +89,7 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="./index.html" class
                         <a  href="tab-panel.html"><i class="fa fa-qrcode fa-3x"></i> Personnels</a>
                     </li>	
                       <li  >
-                        <a  href="tab-panel.html"><i class="fa fa-table fa-3x"></i> Condidats</a>
+                        <a  href="tab-panel.html"><i class="fa fa-table fa-3x"></i> Candidats</a>
                     </li>
                     <li  >
                         <a  href="#"><i class="fa fa-edit fa-3x"></i> Finance </a>
