--- a/AjoutCandidats.html
+++ b/AjoutCandidats.html
@@ -149,10 +149,13 @@ font-size: 16px;"> <a href="./index.html" class="btn btn-danger square-btn-adjus
                                                         
                                                 </select>
                                             <!-- </div> -->
+                                            <div id="ajout">
                                             <button type="button" class="btn btn-primary"  onclick="ajoutCandidat()">Ajouter</button>
+                                        </div>
                                             <button type="reset" class="btn btn-primary">Annuler</button>
+                                            <div id="modif">
                                             <button type="button" class="btn btn-primary"  onclick="modif()">modifier</button>
-
+                                        </div>
 
                                         </form>
                             </form>
