--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@ font-size: 16px;"><a href="#" class="btn btn-danger square-btn-adjust">Logout</a
                 <script src="assets/js/jquery.metisMenu.js"></script>
                 <!-- MORRIS CHART SCRIPTS -->
                 <script src="assets/js/morris/raphael-2.1.0.min.js"></script>
-                <script src="assets/js/morris/morris.js"></script>
+                <!-- <script src="assets/js/morris/morris.js"></script> -->
                 <!-- CUSTOM SCRIPTS -->
-                <script src="assets/js/custom.js"></script>
+                <!-- <script src="assets/js/custom.js"></script> -->
 
 
 </body>
