--- a/AjoutCandidats.html
+++ b/AjoutCandidats.html
@@ -96,7 +96,7 @@ font-size: 16px;"> <a href="./index.html" class="btn btn-danger square-btn-adjus
                                 <a class="active-menu" href="Candidats.html"><i class="fa fa-table fa-3x"></i> Candidats</a>
                             </li>
                         <li  >
-                            <a  href="#"><i class="fa fa-edit fa-3x"></i> Finance </a>
+                            <a  href="finance.html"><i class="fa fa-edit fa-3x"></i> Finance </a>
                         </li>	
                         <li>
                                 <a href="conge.html"><i class="fa fa-edit fa-3x"></i> Conge </a>
