--- a/AjoutFormation.html
+++ b/AjoutFormation.html
@@ -32,7 +32,6 @@
             font-size: 20px;
             float: right;
         }
-
         fieldset {
             border: 1px solid #ddd !important;
             margin: 0;
@@ -75,7 +74,7 @@
             <div style="color: white;
 padding: 15px 50px 5px 50px;
 float: right;
-font-size: 16px;"> <a href="#" class="btn btn-danger square-btn-adjust">Logout</a>
+font-size: 16px;"> <a href="index.html" class="btn btn-danger square-btn-adjust">Logout</a>
             </div>
         </nav>
         <!-- /. NAV TOP  -->
@@ -103,11 +102,11 @@ font-size: 16px;"> <a href="#" class="btn btn-danger square-btn-adjust">Logout</
                         <a href="form.html"><i class="fa fa-edit fa-3x"></i> Finance </a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-edit fa-3x"></i> Conge </a>
+                        <a href="conge.html"><i class="fa fa-edit fa-3x"></i> Conge </a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="#"><i class="fa fa-edit fa-3x"></i> Conge </a>
-                    </li>
+                    </li> -->
                 </ul>
 
             </div>
@@ -156,9 +155,9 @@ font-size: 16px;"> <a href="#" class="btn btn-danger square-btn-adjust">Logout</
                                     <input type="file" id="nomFichier" />
                                 </div>
                                 <div class="form-group input-group">
-                                    <span class="input-group-addon">Dt</span>
+                                    <!-- <span class="input-group-addon">Dt</span> -->
                                     <input type="text" class="form-control" id="montant">
-                                    <span class="input-group-addon">.00</span>
+                                    <span class="input-group-addon">Dt</span>
                                 </div>
                                 <button type="reset" class="btn btn-primary">Annuler</button>
 
