--- a/Formation.html
+++ b/Formation.html
@@ -64,7 +64,7 @@ fieldset
   <div style="color: white;
 padding: 15px 50px 5px 50px;
 float: right;
-font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-danger square-btn-adjust">Logout</a> </div>
+font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="./index.html" class="btn btn-danger square-btn-adjust">Logout</a> </div>
         </nav>   
            <!-- /. NAV TOP  -->
                 <nav class="navbar-default navbar-side" role="navigation">
@@ -88,11 +88,11 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
                             <a  href="Candidats.html"><i class="fa fa-table fa-3x"></i> Candidats</a>
                         </li>
                     <li  >
-                        <a  href="#"><i class="fa fa-edit fa-3x"></i> Finance </a>
+                        <a  href="finance.html"><i class="fa fa-edit fa-3x"></i> Finance </a>
                     </li>			
 					
                     <li>
-                            <a href="#"><i class="fa fa-edit fa-3x"></i> Conge </a>
+                            <a href="conge.html"><i class="fa fa-edit fa-3x"></i> Conge </a>
                         </li>              
                     
                 </ul>
@@ -106,8 +106,9 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
             <div id="page-inner">
                 <div class="row">
                     <div class="col-md-12"> 
-                     <button class="button btn btn-danger square-btn-adjust" style="border-radius: 50%;">+</button>                       
+                     <a class="button btn btn-danger square-btn-adjust"href="./AjoutFormation.html" style="border-radius: 50%;">+</a>                       
                     </div>
+
                 </div>
                  <!-- /. ROW  -->
                  <hr />
