--- a/finance.html
+++ b/finance.html
@@ -109,7 +109,7 @@
             <div style="color: white;
 padding: 15px 50px 5px 50px;
 float: right;
-font-size: 16px;"> <a href="#" class="btn btn-danger square-btn-adjust">Logout</a>
+font-size: 16px;"> <a href="index.html" class="btn btn-danger square-btn-adjust">Logout</a>
             </div>
         </nav>
         <!-- /. NAV TOP  -->
@@ -131,10 +131,10 @@ font-size: 16px;"> <a href="#" class="btn btn-danger square-btn-adjust">Logout</
                             <a  href="Personnel.html"><i class="fa fa-qrcode fa-3x"></i> Personnels</a>
                         </li>	
                           <li  >
-                                <a class="active-menu" href="Candidats.html"><i class="fa fa-table fa-3x"></i> Candidats</a>
+                                <a  href="Candidats.html"><i class="fa fa-table fa-3x"></i> Candidats</a>
                             </li>
                         <li  >
-                            <a  href="#"><i class="fa fa-edit fa-3x"></i> Finance </a>
+                            <a  class="active-menu" href="finance.html"><i class="fa fa-edit fa-3x"></i> Finance </a>
                         </li>	
                         <li>
                                 <a href="conge.html"><i class="fa fa-edit fa-3x"></i> Conge </a>
