--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@ font-size: 16px;"><a href="#" class="btn btn-danger square-btn-adjust">Logout</a
                         <a class="active-menu" href="index.html"><i class="fa fa-dashboard fa-3x"></i> Acceuil</a>
                     </li>
                     <li>
-                        <a  href="Formation.html"><i class="fa fa-desktop fa-3x"></i> Formation</a>
+                        <a  href="Formation.html"><i class="fa fa-book"></i> Formation</a>
                     </li>
                     <li>
-                        <a href="Personnel.html"><i class="fa fa-qrcode fa-3x"></i> Personnels</a>
+                        <a href="Personnel.html"><i class="fa fa-user"></i> Personnels</a>
                     </li>
                     <li>
-                            <a   href="Candidats.html"><i class="fa fa-table fa-3x"></i> Candidats</a>
+                            <a   href="Candidats.html"><i class="fas fa-user"></i> Candidats</a>
                         </li>
                     <li>
-                        <a href="#"><i class="fa fa-edit fa-3x"></i> Finance </a>
+                        <a href="finance.html"><i class="fa fa-edit fa-3x"></i> Finance </a>
                     </li>
                     <li>
-                            <a href="#"><i class="fa fa-edit fa-3x"></i> Conge </a>
+                            <a href="conge.html"><i class="fa fa-edit fa-3x"></i> Conge </a>
                         </li>
                 </ul>
 
@@ -82,10 +82,9 @@ font-size: 16px;"><a href="#" class="btn btn-danger square-btn-adjust">Logout</a
                     <div class="col-md-3 col-sm-6 col-xs-6">
                         <div class="panel panel-back noti-box">
                             <span class="icon-box bg-color-red set-icon">
-                                <i class="fa fa-envelope-o"></i>
+                                <i class="fa fa-book"></i>
                             </span>
                             <div class="text-box">
-                                    <!-- <div class="main-text" onload=""></div> -->
                                 <p class="main-text" id="f"></p>
                                 <p class="text-muted">Formations</p>
                             </div>
@@ -94,7 +93,7 @@ font-size: 16px;"><a href="#" class="btn btn-danger square-btn-adjust">Logout</a
                     <div class="col-md-3 col-sm-6 col-xs-6">
                         <div class="panel panel-back noti-box">
                             <span class="icon-box bg-color-green set-icon">
-                                <i class="fa fa-bars"></i>
+                                <i class="fa fa-user"></i>
                             </span>
                             <div class="text-box">
                                 <p class="main-text"id="man"></p>
@@ -105,7 +104,7 @@ font-size: 16px;"><a href="#" class="btn btn-danger square-btn-adjust">Logout</a
                     <div class="col-md-3 col-sm-6 col-xs-6">
                         <div class="panel panel-back noti-box">
                             <span class="icon-box bg-color-blue set-icon">
-                                <i class="fa fa-bell-o"></i>
+                                <i class="fa fa-users"></i>
                             </span>
                             <div class="text-box">
                                 <p class="main-text" id="co"></p>
@@ -116,7 +115,7 @@ font-size: 16px;"><a href="#" class="btn btn-danger square-btn-adjust">Logout</a
                     <div class="col-md-3 col-sm-6 col-xs-6">
                         <div class="panel panel-back noti-box">
                             <span class="icon-box bg-color-brown set-icon">
-                                <i class="fa fa-rocket"></i>
+                                    <i class="fa fa-search"></i>
                             </span>
                             <div class="text-box">
                                     <div class="main-text" id="can"></div>
