--- a/AjouterPersonnel.html
+++ b/AjouterPersonnel.html
@@ -77,7 +77,7 @@
             <div style="color: white;
 padding: 15px 50px 5px 50px;
 float: right;
-font-size: 16px;"><a href="#" class="btn btn-danger square-btn-adjust">Logout</a>
+font-size: 16px;"><a href="index.html" class="btn btn-danger square-btn-adjust">Logout</a>
             </div>
         </nav>
         <!-- /. NAV TOP  -->
@@ -102,12 +102,12 @@ font-size: 16px;"><a href="#" class="btn btn-danger square-btn-adjust">Logout</a
                                 <a  href="Candidats.html"><i class="fa fa-table fa-3x"></i> Candidats</a>
                             </li>
                         <li  >
-                            <a  href="#"><i class="fa fa-edit fa-3x"></i> Finance </a>
+                            <a  href="finance.html"><i class="fa fa-edit fa-3x"></i> Finance </a>
                         </li>	
 
 
                         <li>
-                                <a href="#"><i class="fa fa-edit fa-3x"></i> Conge </a>
+                                <a href="conge.html"><i class="fa fa-edit fa-3x"></i> Conge </a>
                             </li>
                 </ul>
 
@@ -156,9 +156,8 @@ font-size: 16px;"><a href="#" class="btn btn-danger square-btn-adjust">Logout</a
                                                 <input class="form-control"  type="text" placeholder="Password"  id="pswdP"/>
                                             </div>
                                 <div class="form-group input-group">
+                                    <input type="text" class="form-control" id="montantP" placeholder="Salaire">
                                     <span class="input-group-addon">Dt</span>
-                                    <input type="text" class="form-control" id="montantP">
-                                    <span class="input-group-addon">.00</span>
                                 </div>
                                 <button type="reset" class="btn btn-primary" >Annuler</button>
 
