--- a/Candidats.html
+++ b/Candidats.html
@@ -88,7 +88,7 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="./index.html" class
                         <a  class="active-menu" href="Candidats.html"><i class="fa fa-table fa-3x"></i> Candidats</a>
                     </li>
                     <li  >
-                        <a  href="#"><i class="fa fa-edit fa-3x"></i> Finance </a>
+                        <a  href="finance.html"><i class="fa fa-edit fa-3x"></i> Finance </a>
                     </li>			
 				 
                 <li>
