--- a/conge.html
+++ b/conge.html
@@ -68,7 +68,7 @@
   <div style="color: white;
 padding: 15px 50px 5px 50px;
 float: right;
-font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-danger square-btn-adjust">Logout</a> </div>
+font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="index.html" class="btn btn-danger square-btn-adjust">Logout</a> </div>
         </nav>   
            <!-- /. NAV TOP  -->
                 <nav class="navbar-default navbar-side" role="navigation">
@@ -92,7 +92,7 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
                         <a  href="tab-panel.html"><i class="fa fa-table fa-3x"></i> Candidats</a>
                     </li>
                     <li  >
-                        <a  href="#"><i class="fa fa-edit fa-3x"></i> Finance </a>
+                        <a  href="finance.html"><i class="fa fa-edit fa-3x"></i> Finance </a>
                     </li>			
 					
 					                   
