--- a/AjoutFormation.html
+++ b/AjoutFormation.html
@@ -16,45 +16,8 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' 
     integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
-    <style type="text/css">
-        #center {
-            margin: auto;
-            width: 50%;
-            padding: 10px;
-        }
-
-        .button {
-            background-color: gray;
-            border: none;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            text-decoration: none;
-
-            font-size: 20px;
-            float: right;
-        }
-        fieldset {
-            border: 1px solid #ddd !important;
-            margin: 0;
-            padding: 10px;
-            position: relative;
-            border-radius: 4px;
-            background-color: #f5f5f5;
-            padding-left: 10px !important;
-        }
-
-        legend {
-            font-size: 14px;
-            font-weight: bold;
-            margin-bottom: 0px;
-            width: 35%;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            padding: 5px 5px 5px 10px;
-            background-color: #ffffff;
-        }
-    </style>
+    <link href="css/StyleGeneral.css" rel="stylesheet" />
+    
     <script src="Enties/Formation.js" type="text/javascript"></script>
     <script src="Enties/LocalStorage.js" type="text/javascript"></script>
     <script src="Metier/FormationMetier.js" type="text/javascript"></script>
