--- a/finance.html
+++ b/finance.html
@@ -18,8 +18,11 @@
     <link rel="stylesheet" type="text/css" href="css/finance.css">
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' 
     integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+    <link rel="stylesheet" type="text/css" href="css/StyleGeneral.css">
     <script src="Enties/LocalStorage.js"></script>
-<script src="Metier/Finance.js"></script>
+    <script src="Metier/Finance.js"></script>
+
+
 </head>
 <body onload="selectCoach();selectCondidat()">
     <div id="wrapper">
@@ -31,12 +34,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Binary admin</a>
+                <a class="navbar-brand" href="index.html">Five Points Erp</a>
             </div>
-            <div style="color: white;
-padding: 15px 50px 5px 50px;
-float: right;
-font-size: 16px;"> <a href="#" class="btn btn-danger square-btn-adjust">Logout</a>
+            <div style="color: white;padding: 15px 50px 5px 50px;float: right;font-size: 16px;"> 
+                <a href="./Login/login.html" class="btn btn-danger square-btn-adjust">Logout</a>
             </div>
         </nav>
         <!-- /. NAV TOP  -->
@@ -49,23 +50,23 @@ font-size: 16px;"> <a href="#" class="btn btn-danger square-btn-adjust">Logout</
 
 
                     <li>
-                            <a   href="index.html"><i class="fa fa-dashboard fa-3x"></i> Acceuil</a>
-                        </li>
-                         <li>
-                            <a  href="Formation.html"><i class="fa fa-desktop fa-3x"></i> Formation</a>
-                        </li>
-                        <li>
-                            <a  href="Personnel.html"><i class="fa fa-qrcode fa-3x"></i> Personnels</a>
+                        <a  href="index.html"><i class='fas fa-home' style='font-size:36px'></i> Acceuil</a>
+                    </li>
+                     <li>
+                        <a  href="Formation.html"><i class="fas fa-laptop-code" style='font-size:36px'></i> Formation</a>
+                    </li>
+                    <li>
+                        <a  href="Personnel.html"><i class="fa fa-users" style='font-size:36px'></i> Personnels</a>
+                    </li>	
+                      <li  >
+                        <a  href="Candidats.html"><i class="fas fa-user-graduate" style='font-size:36px'></i> Candidats</a>
+                    </li>
+                    <li  >
+                        <a  href="finance.html"><i class='fas fa-money-check-alt' style='font-size:36px;color:brown'></i> Finance </a>
+                    </li>			                
+                    <li>
+                            <a href="conge.html"><i class="fa fa-edit fa-3x" ></i> Conge </a>
                         </li>	
-                          <li  >
-                                <a  href="Condidats.html"><i class="fa fa-table fa-3x"></i> Condidats</a>
-                            </li>
-                        <li  >
-                            <a  class="active-menu" href="finance.html"><i class="fa fa-edit fa-3x"></i> Finance </a>
-                        </li>	
-                        <li>
-                                <a href="conge.html"><i class="fa fa-edit fa-3x"></i> Conge </a>
-                            </li>
                 </ul>
 
             </div>
@@ -112,7 +113,8 @@ font-size: 16px;"> <a href="#" class="btn btn-danger square-btn-adjust">Logout</
                                     </div>
                                     <button type="button" class="btn btn-success btn-sm" onclick="addFinance()">Ajouter</button>
                                     <button type="reset" class="btn btn-primary btn-sm">Annuler</button>
-                                  </div>
+                                 <div id="table"> </div> 
+                                </div>
                         </div>
                     </div>
                 </fieldset>
